--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 * {
   margin: 0;
@@ -8,23 +7,22 @@
 }
 
 body {
-  cursor: url('/src/img/cursor2.svg'), auto;
+  cursor: url("/src/img/cursor2.svg"), auto;
   width: 100%;
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 ::selection {
-  background-color: var(--hot-purple); 
-  color: white; 
+  background-color: var(--hot-purple);
+  color: white;
 }
 
 :root {
- --gray: #D4D4D4; 
- --hot-purple: #7421FC; 
- --purple: #A78BFA; 
- --white: #fff; 
- --black: #171719; 
-
+  --gray: #d4d4d4;
+  --hot-purple: #7421fc;
+  --purple: #a78bfa;
+  --white: #fff;
+  --black: #171719;
 }
 
 /*
@@ -45,12 +43,11 @@ nav {
   align-items: center;
 }
 
-.nav-left-menu ul{
+.nav-left-menu ul {
   display: flex;
   width: 100%;
   gap: 4rem;
 }
-
 
 .nav-left-menu ul li {
   list-style-type: none;
@@ -61,7 +58,6 @@ nav {
 
 .nav-left-menu ul li:hover {
   color: var(--hot-purple);
-
 }
 
 .nav-right a button {
@@ -70,7 +66,7 @@ nav {
   background-color: var(--hot-purple);
   border-radius: 30px;
   border: none;
-  transition: 0.50s all ease;
+  transition: 0.5s all ease;
 }
 
 .nav-right {
@@ -89,14 +85,14 @@ nav {
 }
 
 .nav-right a button:hover {
-  cursor: url('/src/img/cursor2.svg'), auto;
+  cursor: url("/src/img/cursor2.svg"), auto;
   border-radius: 5px;
   scale: 1.1;
-  transition: 0.50s all ease-out;
+  transition: 0.5s all ease-out;
 }
 
-.nav-right a button:not(:hover){
-  transition: 0.50s ease-out;
+.nav-right a button:not(:hover) {
+  transition: 0.5s ease-out;
 }
 
 .nav-right img {
@@ -118,23 +114,23 @@ nav {
 /* Text */
 
 .home-title {
-    width: 100%;
-    height: 100%;
-    color: var(--black);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 25px;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+  flex-direction: column;
 }
 
 .home-title h1 {
-    margin-top: 10rem;
+  margin-top: 10rem;
 }
 
 .home-title h1 span {
-    color: var(--hot-purple);
+  color: var(--hot-purple);
 }
 
 .home-description p {
@@ -145,36 +141,35 @@ nav {
   top: 41.5%;
   left: 42.2%;
   position: absolute;
- width: 21%;
+  width: 21%;
 }
 
-
 .home-title p {
-    margin-top: 2rem;
-    text-align: left;
-    font-size: 20px;
+  margin-top: 2rem;
+  text-align: left;
+  font-size: 20px;
 }
 
 .home-avatar {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-top: 40px;
 }
 
 .home-avatar img {
-    width: 70px;
-    transition-property: transform margin;
-    transition-duration: 300ms;
+  width: 70px;
+  transition-property: transform margin;
+  transition-duration: 300ms;
 }
 
 .home-avatar img:hover {
-    transform: translateY(-12px); 
-    margin-bottom: 0; 
+  transform: translateY(-12px);
+  margin-bottom: 0;
 }
 
 .home-avatar img:not(:first-child) {
-    margin-left: -25px;
+  margin-left: -25px;
 }
 
 /* */
@@ -187,14 +182,23 @@ nav {
 }
 
 @keyframes typing {
-  from { width: 0; }
-  to { width: 100%; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 @keyframes blink-caret {
-  from, to { border-color: transparent; }
-  50% { border-color: var(--hot-purple); }
-} 
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--hot-purple);
+  }
+}
 
 /*
 */
@@ -211,7 +215,17 @@ nav {
   gap: 4rem;
   align-items: center;
   overflow: hidden;
-} 
+}
+
+.trusted-side,
+.trusted-side *,
+.trusted-side :after,
+.trusted-side :before,
+.trusted-side:after,
+.trusted-side:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
 
 .trusted-side span {
   color: var(--hot-purple);
@@ -245,13 +259,14 @@ marquee span {
   align-items: center;
   position: fixed;
   top: 3%;
-  left: 37%;
+  left: 39%;
   width: 420px;
   height: 55px;
   background-color: rgba(9, 9, 9, 0.4);
-  box-shadow: 0 25px 45px rgba(0, 0, 0, .2);
-  border-radius: 50px; /* Boşluk Satırı*/
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
   backdrop-filter: blur(10px);
+  z-index: 999;
 }
 
 .nav-test ul {
@@ -295,9 +310,9 @@ marquee span {
 
 .projects-picture {
   display: grid;
-  grid-template-areas: 
-  'box1 box1 box2 box2'
-  'box3 box4 box4 box5';
+  grid-template-areas:
+    "box1 box1 box2 box2"
+    "box3 box4 box4 box5";
   width: 900px;
   height: 500px;
   grid-gap: 1rem;
@@ -309,27 +324,49 @@ marquee span {
   width: 100%;
   height: 100%;
   border-radius: 20px;
+  filter: grayscale(100%);
+}
+
+.box:hover {
+  filter: grayscale(0%);
+
 }
 
 .box-1 {
   grid-area: box1;
+  background-image: url(/src/img/grid2img.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .box-2 {
   grid-area: box2;
+  background-image: url(/src/img/grid1img.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .box-3 {
   grid-area: box3;
+  background-image: url(/src/img/grid3img.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .box-4 {
   grid-area: box4;
+  background-image: url(/src/img/grid5img.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .box-5 {
   grid-area: box5;
+  background-image: url(/src/img/grid4img.png);
+  background-size: cover;
+  background-position: center;
 }
+
 
 /*
 */
@@ -340,7 +377,7 @@ marquee span {
   background-repeat: no-repeat;
   background-size: contain;
   width: 100%;
-  height: 70vh;
+  height: 65vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -357,491 +394,268 @@ marquee span {
 }
 
 .team-bg {
-background-color: #EFEFEF;
-width: 288px;
-height: 380px;
-border-radius: 25px;
-margin-top:-24px;
-z-index: -1;
-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: transparent;
+  width: 265px;
+  height: 350px;
+  border-radius: 25px;
+  margin-top: -24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .team-background img {
-width: 120px;
-margin-bottom: 2%;
+  width: 110px;
+  margin-bottom: 2%;
 }
 
 .flx {
-display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 5%;
-flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  flex-direction: column;
+}
+
+.flx h2 {
+  font-size: 19px;
 }
 
 .flx a {
   text-decoration: none;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  width: 220px;
   height: 50px;
   border-radius: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 23%;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 900;
+  border-bottom: 1px solid var(--gray);
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .icons {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 6%;
+  gap: 1rem;
+  margin-top: 50px;
 }
 .icons img {
-width: 40px;
-transition: transform 0.3s ease-in-out;
-}
-.lft { /* left için*/
-margin-left: 20px;
+  width: 31px;
+  transition: transform 0.3s ease-in-out;
 }
 
-.team-bg .icons img:hover {
-  transform: translateY(-30px);
-}
-/*
-*/
-
-.sparkle-button {
-  --active: 0;
-  --bg: radial-gradient(
-			40% 50% at center 100%,
-			hsl(270 calc(var(--active) * 97%) 72% / var(--active)),
-			transparent
-		),
-		radial-gradient(
-			80% 100% at center 120%,
-			hsl(260 calc(var(--active) * 97%) 70% / var(--active)),
-			transparent
-		),
-		hsl(260 calc(var(--active) * 97%) calc((var(--active) * 44%) + 12%));
-  background: var(--bg);
-  font-size: 1.2rem;
+.team-container p {
+  font-size: 17px;
   font-weight: 500;
-  border: 0;
-  cursor: pointer;
-  padding: 1em 1em;
+  padding-top: 0.5rem;
+  text-align: center;
+}
+
+.team-container p span {
+  color: var(--hot-purple);
+}
+
+.team-btn {
   display: flex;
-  align-items: center;
-  gap: 0.25em;
-  white-space: nowrap;
-  border-radius: 100px;
-  position: relative;
-  box-shadow: 0 0 calc(var(--active) * 3em) calc(var(--active) * 1em) hsl(260 97% 61% / 0.75),
-		0 0em 0 0 hsl(260 calc(var(--active) * 97%) calc((var(--active) * 50%) + 30%)) inset,
-		0 -0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc(var(--active) * 60%)) inset;
-  transition: box-shadow var(--transition), scale var(--transition), background var(--transition);
-  scale: calc(1 + (var(--active) * 0.1));
-  transition: .3s;
-}
-
-.sparkle-button:active {
-  scale: 1;
-  transition: .3s;
-}
-
-.sparkle path {
-  color: hsl(0 0% calc((var(--active, 0) * 70%) + var(--base)));
-  transform-box: fill-box;
-  transform-origin: center;
-  fill: currentColor;
-  stroke: currentColor;
-  animation-delay: calc((var(--transition) * 1.5) + (var(--delay) * 1s));
-  animation-duration: 0.6s;
-  transition: color var(--transition);
-}
-
-.sparkle-button:is(:hover, :focus-visible) path {
-  animation-name: bounce;
-}
-
-@keyframes bounce {
-  35%, 65% {
-    scale: var(--scale);
-  }
-}
-
-.sparkle path:nth-of-type(1) {
-  --scale: 0.5;
-  --delay: 0.1;
-  --base: 40%;
-}
-
-.sparkle path:nth-of-type(2) {
-  --scale: 1.5;
-  --delay: 0.2;
-  --base: 20%;
-}
-
-.sparkle path:nth-of-type(3) {
-  --scale: 2.5;
-  --delay: 0.35;
-  --base: 30%;
-}
-
-.sparkle-button:before {
-  content: "";
-  position: absolute;
-  inset: -0.2em;
-  z-index: -1;
-  border: 0.25em solid hsl(260 97% 50% / 0.5);
-  border-radius: 100px;
-  opacity: var(--active, 0);
-  transition: opacity var(--transition);
-}
-
-.spark {
-  position: absolute;
-  inset: 0;
-  border-radius: 100px;
-  rotate: 0deg;
-  overflow: hidden;
-  mask: linear-gradient(white, transparent 50%);
-  animation: flip calc(var(--spark) * 2) infinite steps(2, end);
-}
-
-@keyframes flip {
-  to {
-    rotate: 360deg;
-  }
-}
-
-.spark:before {
-  content: "";
-  position: absolute;
-  width: 200%;
-  aspect-ratio: 1;
-  top: 0%;
-  left: 50%;
-  z-index: -1;
-  translate: -50% -15%;
-  rotate: 0;
-  transform: rotate(-90deg);
-  opacity: calc((var(--active)) + 0.4);
-  background: conic-gradient(
-		from 0deg,
-		transparent 0 340deg,
-		white 360deg
-	);
-  transition: opacity var(--transition);
-  animation: rotate var(--spark) linear infinite both;
-}
-
-.spark:after {
-  content: "";
-  position: absolute;
-  inset: var(--cut);
-  border-radius: 100px;
-}
-
-.backdrop {
-  position: absolute;
-  inset: var(--cut);
-  background: var(--bg);
-  border-radius: 100px;
-  transition: background var(--transition);
-}
-
-@keyframes rotate {
-  to {
-    transform: rotate(90deg);
-  }
-}
-
-@supports(selector(:has(:is(+ *)))) {
-  body:has(button:is(:hover, :focus-visible)) {
-    --active: 1;
-    --play-state: running;
-  }
-
-  .bodydrop {
-    display: none;
-  }
-}
-
-.sparkle-button:is(:hover, :focus-visible) ~ :is(.bodydrop, .particle-pen) {
-  --active: 1;
-  --play-state: runnin;
-}
-
-.sparkle-button:is(:hover, :focus-visible) {
-  --active: 1;
-  --play-state: running;
-}
-
-.sp {
-  position: relative;
-}
-
-.particle-pen {
-  position: absolute;
-  width: 200%;
-  aspect-ratio: 1;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  -webkit-mask: radial-gradient(white, transparent 65%);
-  z-index: -1;
-  opacity: var(--active, 0);
-  transition: opacity var(--transition);
-}
-
-.particle {
-  fill: white;
-  width: calc(var(--size, 0.25) * 1rem);
-  aspect-ratio: 1;
-  position: absolute;
-  top: calc(var(--y) * 1%);
-  left: calc(var(--x) * 1%);
-  opacity: var(--alpha, 1);
-  animation: float-out calc(var(--duration, 1) * 1s) calc(var(--delay) * -1s) infinite linear;
-  transform-origin: var(--origin-x, 1000%) var(--origin-y, 1000%);
-  z-index: -1;
-  animation-play-state: var(--play-state, paused);
-}
-
-.particle path {
-  fill: hsl(0 0% 90%);
-  stroke: none;
-}
-
-.particle:nth-of-type(even) {
-  animation-direction: reverse;
-}
-
-@keyframes float-out {
-  to {
-    rotate: 360deg;
-  }
-}
-
-.text {
-  translate: 2% -6%;
-  letter-spacing: 0.01ch;
-  background: linear-gradient(90deg, hsl(0 0% calc((var(--active) * 100%) + 65%)), hsl(0 0% calc((var(--active) * 100%) + 26%)));
-  -webkit-background-clip: text;
-  color: transparent;
-  transition: background var(--transition);
-}
-
-.sparkle-button svg {
-  inline-size: 1.25em;
-  translate: -25% -5%;
-}
-
-/*
-*/
-
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 15px;
-  width: 300px;
-  height: 100px;
-  position: relative;
-  overflow: hidden;
-  border-radius: 14px;
-}
-.content::before {
-  content: "";
-  position: absolute;
-  left: 0%;
-  top: 50%;
-  transform: translateY(-50%);
-  bottom: 0;
-  width: 40px;
-  height: 96px;
-  background-image: linear-gradient(90deg, #0000001c, transparent);
-  z-index: 2;
-  border-radius: 10px 0 0 10px;
-}
-.content::after {
-  content: "";
-  position: absolute;
-  right: 0%;
-  top: 50%;
-  transform: translateY(-50%);
-  bottom: 0;
-  width: 40px;
-  height: 96px;
-  background-image: linear-gradient(-90deg, #0000001c, transparent);
-  z-index: 9;
-  border-radius: 0 10px 10px 0;
-}
-.basic-marquee {
-  display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 10px;
+  align-items: center;
   width: 100%;
+  border-radius: 30px;
 }
-.basic-marquee .button {
-  transition: all 0.3s ease;
-}
-.basic-marquee .button:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-.basic-marquee-1 {
-  animation: marquee 15s linear infinite;
-}
-.basic-marquee-2 {
-  animation: marquee 21s linear infinite;
-}
-.benefits {
+
+.team-btn a {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  gap: 15px;
-  min-width: 900px;
-  height: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  position: absolute;
-  inset: 0;
+  align-items: center;
+  gap: 1rem;
+  color: var(--white);
+  text-decoration: none;
+  font-size: 19px;
+  font-weight: 600;
 }
+
+.btn-23,
+.btn-23 *,
+.btn-23 :after,
+.btn-23 :before,
+.btn-23:after,
+.btn-23:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+
+.btn-23 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: #fff;
+  cursor: url("/src/img/cursor2.svg"), auto;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  font-weight: 900;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.btn-23:disabled {
+  cursor: default;
+}
+
+.btn-23:-moz-focusring {
+  outline: auto;
+}
+
+.btn-23 svg {
+  display: block;
+  vertical-align: middle;
+}
+
+.btn-23 [hidden] {
+  display: none;
+}
+
+.btn-23 {
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  padding: 0.8rem 3rem;
+  position: relative;
+  background-color: var(--hot-purple);
+  width: 200px;
+  height: 60px;
+}
+
+.marquee img {
+  width: 15%;
+}
+
+.btn-23 span {
+  display: grid;
+  inset: 0;
+  place-items: center;
+  position: absolute;
+  transition: opacity 0.2s ease;
+}
+
+.btn-23 .marquee {
+  --spacing: 10em;
+  --start: 20em;
+  --end: 10em;
+  -webkit-animation: marquee 2s linear infinite;
+  animation: marquee 2s linear infinite;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  opacity: 0;
+  position: relative;
+  text-shadow: #fff var(--spacing) 0, #fff calc(var(--spacing) * -1) 0,
+    #fff calc(var(--spacing) * -2) 0;
+}
+
+.btn-23:hover .marquee {
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+  opacity: 1;
+}
+
+.btn-23:hover .text {
+  opacity: 0;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    transform: translateX(var(--start));
+  }
+
+  to {
+    transform: translateX(var(--end));
+  }
+}
+
 @keyframes marquee {
   0% {
-    transform: translateX(-10%);
+    transform: translateX(var(--start));
   }
-  100% {
-    transform: translateX(-50%);
+
+  to {
+    transform: translateX(var(--end));
   }
 }
 
-.basic-marquee svg {
-  width: 40px;
+.team-btn-i {
+  display: flex;
+  background-color: var(--hot-purple);
+  border: 1px solid var(--gray);
+  width: 250px;
+  height: 60px;
+  border-radius: 30px;
 }
-.basic-marquee button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin: 0;
+
+.team-btn a img {
+  width: 12%;
+}
+
+/*
+*/
+
+.footer {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  gap: 10rem;
+  margin-left: 15rem;
+  margin-right: 15rem;
+  margin-top: 20rem;
+}
+
+.footer .footer-top h1 {
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.footer .footer-top p {
+  padding-top: 0.5rem;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer .footer-top h2 {
+  padding-top: 2rem;
+  font-size: 50px;
+}
+
+.footer .footer-bottom {
+  width: 100%;
+  margin-bottom: 2rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-.cls-1 {
-  fill: #1ab7ea;
+  justify-content: space-between;
 }
 
-.cls-1,
-.cls-2 {
-  fill-rule: evenodd;
+.footer-bottom span {
+  color: var(--hot-purple);
 }
 
-.cls-2 {
-  fill: #fff;
+.zoey-social {
+  display: flex;
+  gap: 1rem;
 }
 
-.cls-3 {
-  fill: #ee8208;
-  fill-rule: evenodd;
+.zoey-social a img {
+  width: 100%;
 }
 
-.cls-4 {
-  fill: #fff;
-}
-
-.cls-5,
-.cls-6 {
-  fill-rule: evenodd;
-}
-
-.cls-5 {
-  fill: #48dd55;
-}
-
-.cls-6 {
-  fill: #fff;
-}
-
-.cls-7 {
-  fill: #0a66c2;
-}
-
-.cls-7,
-.cls-8 {
-  fill-rule: evenodd;
-}
-
-.cls-8 {
-  fill: #fff;
-}
-
-.cls-9 {
-  fill: #10b7f4;
-}
-
-.cls-9,
-.cls-10 {
-  fill-rule: evenodd;
-}
-
-.cls-10 {
-  fill: #fff;
-}
-
-.cls-11 {
-  fill: #1da1f2;
-}
-
-.cls-11,
-.cls-12 {
-  fill-rule: evenodd;
-}
-
-.cls-12 {
-  fill: #fff;
-}
-
-.cls-13 {
-  fill: #ea4c89;
-}
-
-.cls-13,
-.cls-14 {
-  fill-rule: evenodd;
-}
-
-.cls-14 {
-  fill: #fff;
-}
-
-.cls-15 {
-  fill: #1769ff;
-}
-
-.cls-15,
-.cls-16 {
-  fill-rule: evenodd;
-}
-
-.cls-16 {
-  fill: #fff;
-}
-
-.cls-17 {
-  fill: #f26522;
-}
-
-.cls-17,
-.cls-18 {
-  fill-rule: evenodd;
-}
-
-.cls-18 {
-  fill: #fff;
+.footer-bottom div:first-child {
+  font-weight: 500;
 }
